# pyhwk

./: .gitignore  LICENSE  README.md  pyproject.toml
hwk/: __init__.py
hwk/test/: autograde.py  autograde.schema.json  exec.py  mock_random.py  notebook.py  runner.py  trace.py  unittest.py
hwk/util/: code.py  common.py  pytrace.py  run_script.py  zip_workspace.py
hwk/util/ipython/: __init__.py  trace.py
